[package]
name = "custos-math"
version = "0.5.0"
edition = "2021"
license = "MIT"
categories = ["mathematics", "science"]
keywords = ["CUDA", "OpenCL", "arrays", "matrices", "deep-learning"]
description = "Matrix operations with custos"
readme = "README.md"
repository = "https://github.com/elftausend/custos-math"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#custos = {git = "https://github.com/elftausend/custos"}
custos = { path = "../custos", default-features = false, features=["macro"] }

#custos = { version = "0.5.0", default-features = false }
fastrand = {version="1.8.0", optional=true}
matrixmultiply = { version="0.3.2", default-features=false, optional = true }

[build-dependencies]
#custos = { path = "../custos", default-features = false, optional=true }

[features] 
default = ["cpu", "matrixmultiply", "stack"]
#default = ["fastrand", "stack", "cpu", "matrixmultiply"]
#matrixmultiply = ["dep:matrixmultiply"]
cpu = ["custos/cpu"]
stack = ["custos/stack"]
opencl = ["custos/opencl"]
cuda = ["custos/cuda"]
realloc = ["custos/realloc"]
no-std = ["custos/no-std", "stack", "matrixmultiply"]
blas = ["custos/blas"]

[[example]]
name = "simple"
required-features = ["opencl"]

[[test]]
name = "switching"
required-features = ["opencl"]

[[test]]
name = "threading_realloc"
required-features = ["realloc"]

[[test]]
name = "realloc"
required-features = ["realloc"]
