[package]
name = "custos-math"
version = "0.6.2"
edition = "2021"
license = "MIT"
categories = ["mathematics", "science", "no-std"]
keywords = ["CUDA", "OpenCL", "arrays", "matrices", "deep-learning"]
description = "Matrix operations with custos"
readme = "README.md"
repository = "https://github.com/elftausend/custos-math"
rust-version = "1.65"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#custos = {git = "https://github.com/elftausend/custos"}
#custos = { path = "../custos", default-features = false, features=["macro"] }
custos = { version = "0.6.2", default-features = false, features=["macro"] }

fastrand = {version="1.8.0", optional=true}
matrixmultiply = { version="0.3.2", default-features=false, optional = true }

[build-dependencies]
#custos = { path = "../custos", default-features = false, optional=true }

[features] 
#default = ["no-std"]
default = ["blas", "fastrand", "cpu", "opencl", "static-api", "cuda"]
#default = ["fastrand", "stack", "cpu", "matrixmultiply"]
#matrixmultiply = ["dep:matrixmultiply"]
static-api = ["custos/static-api"]
cpu = ["custos/cpu"]
stack = ["custos/stack"]
opencl = ["custos/opencl", "cpu"]
cuda = ["custos/cuda"]
realloc = ["custos/realloc"]
no-std = ["custos/no-std", "stack"]
blas = ["custos/blas"]

[[example]]
name = "simple"
required-features = ["opencl"]

[[test]]
name = "switching"
required-features = ["opencl"]

[[test]]
name = "threading_realloc"
required-features = ["realloc"]

[[test]]
name = "realloc"
required-features = ["realloc"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]