[package]
name = "custos-math"
version = "0.6.3"
edition = "2021"
license = "MIT"
categories = ["mathematics", "science", "no-std"]
keywords = ["CUDA", "OpenCL", "arrays", "matrices", "deep-learning"]
description = "Matrix operations with custos"
readme = "README.md"
repository = "https://github.com/elftausend/custos-math"
rust-version = "1.65"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

custos = {git = "https://github.com/elftausend/custos", branch = "custos-0.7", default-features = false, features=["macro"] }
# custos = { path = "../custos", default-features = false, features=["macro"] }
#custos = { version = "0.6.3", default-features = false, features=["macro"] }


fastrand = {version="1.9.0", optional=true}
matrixmultiply = { version="0.3.2", default-features=false, optional = true }

[build-dependencies]
#custos = { path = "../custos", default-features = false, optional=true }

[dev-dependencies]
criterion = "0.5"

[features] 
#default = ["no-std"]
default = ["blas", "fastrand", "cpu", "opencl", "static-api",]
#default = ["fastrand", "stack", "cpu", "matrixmultiply"]
#matrixmultiply = ["dep:matrixmultiply"]
static-api = ["custos/static-api"]
cpu = ["custos/cpu"]
stack = ["custos/stack"]
opencl = ["custos/opencl", "cpu"]
cuda = ["custos/cuda", "cpu"]
realloc = ["custos/realloc"]
no-std = ["custos/no-std", "stack"]
blas = ["custos/blas"]

[[example]]
name = "cpu_cache"
required-features = ["cpu"]

[[example]]
name = "cpu_device"
required-features = ["cpu"]

[[example]]
name = "gemm"
required-features = ["cpu"]

[[example]]
name = "simple"
required-features = ["opencl"]

[[test]]
name = "matrix"
required-features = ["cpu"]

[[bench]]
name = "add_to_row"
harness = false
required-features = ["cuda"]

[[test]]
name = "math"
required-features = ["cpu"]

[[test]]
name = "switching"
required-features = ["opencl"]

[[test]]
name = "threading_realloc"
required-features = ["realloc"]

[[test]]
name = "realloc"
required-features = ["realloc"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]